test/syntaxerrors/TestForLoopCommaSeparator2.jdc
for (int i = 0; i < 3, i++) { //do nothing }